--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
   "repository": "git@github.com:ubacm/victor.git",
   "author": "Angus Lam <angushtlam@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "npm run server:build && npm run server:serve",
+    "server:build": "babel index.js --ignore node_modules --out-dir dist",
+    "server:serve": "export NODE_ENV=production && node dist/index.js",
+    "util:purge_build": "rm -rf dist"
+  },
   "dependencies": {
     "body-parser": "^1.18.0",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-root-import": "^5.1.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "express": "^4.15.4"
   }
 }
